--- a/report.tex
+++ b/report.tex
@@ -917,8 +917,6 @@ which shows $\epsilon^N L_0\subset L_0'$. Moreover,
 as a result of Lemma \ref{lemma:codimension-fomula-corner-sums}. 
 \end{proof}
 
-{\color{gray}Should I define that diameter of $A$, $dia(A)$ to be the minimal $N$ so that $\xprod[L]{A}\subset\Pi_{N,\co{A}}^a(L)$? Then the previous lemma shows $\xprod[L]{A}\subset\Pi_{N,\co{A}}^a(L)$ whenever $N\geq dia(A)$.}
-
 \begin{lemma}\label{lemma:orbits-are-quasiprojective}
 Given $A\in\matrices$ and $L\in\flags_{\ro{A}}$, $\xprod[L]{A}$ is a locally closed subset of $\Pi_{N,\co{A}}^a(L)$ for some $N\in\naturals$ and where $a=d_{nN,0}{A}$. In particular, $\xprod[L]{A}$ is a quasiprojective variety.
 \end{lemma}
@@ -938,14 +936,16 @@ Therefore $\xprod[L]{A}$ is the intersection of an open set and a closed set in 
 \end{proof}
 
 \begin{lemma}\label{lemma:orbits-are-irreducible}
-Given $A\in\matrices$ and $L\in\flags_{ro{A}}$, $\xprod[L]{A}$ is an irreducible quasi-projective variety.
+Given $A\in\matrices$ and $L\in\flags_{ro{A}}$, $\xprod[L]{A}$ is irreducible.
 \end{lemma}
 
 \begin{proof}
-Lemma \ref{lemma:orbits-are-quasiprojective} shows that $\xprod[L]{A}$ is a quasiprojective variety. In particular, $\xprod[L]{A}$ is a locally-closed subset of $\Pi_{N,\co{A}}^a(L)$ for some $N\in\naturals$ and $a=d_{nN,0}(A)$. Lemma \ref{lemma:connected-algebraic-group} shows $G_L/{H_{N,L}}$ is a connected algebraic group acting algebraically on $\Pi_{N,\co{A}}^a(L)$, so each orbit is irreducible. In particular, if $L'\in\xprod[L]{A}$, then $\xprod[L]{A}=G_L\cdot L'=G_L/{H_{N,L}}\cdot L'$ is irreducible.
+There is $N\in\naturals$ such that $\xprod[L]{A}\subset\Pi_{N,\lambda}^a(L)$, where $\lambda=\co{A}$ and $a=d_{nN,0}{A}$, using Lemma \ref{lemma:bounded-orbits}.
+
+Lemma \ref{lemma:connected-algebraic-group} shows that $G_L/{H_{N,L}}$ is a connected algebraic group acting algebraically on $\Pi_{N,\lambda}^a(L)$, so each orbit is an irreducible locally closed set in $\Pi_{N,\lambda}^a(L)$. In particular, $\xprod[L]{A}$ is irreducible since $\xprod[L]{A} = G_L/{H_{N,L}}\cdot L'$ for any $L'\in\xprod[L]{A}$.
 \end{proof}
 
-Consequently, the closure of $\xprod[L]{A}$ is an irreducible projective variety.
+Consequently, $\overline{\xprod[L]{A}}$ is an irreducible projective variety and the action of $G_L/{H_{N,L}}$ on $\Pi_{N,\lambda}^a(L)$ restricts to an algebraic group action on $\overline{\xprod[L]{A}}$ for which there are finitely many orbits. In particular, $\overline{\xprod[L]{A}}\setminus\xprod[L]{A}$ is a union of finitely many orbits which are so-called degenerations of the orbit $\xprod[L]{A}$.
 
 \subsection{Geometry of orbit products}
 
@@ -1081,9 +1081,10 @@ Needs a proof.
 }
 
 \begin{lemma}\label{lemma:y-prod-is-quasiprojective}
-Given $A,B\in\matrices$ with $\co{A}=\ro{B}$ and $L\in\flags_{\ro{A}}$, $\yprod[L]{A,B}$ is a quasiprojective variety.
+Given $A,B\in\matrices$ with $\co{A}=\ro{B}$ and $L\in\flags_{\ro{A}}$, $\yprod[L]{A,B}$ is a locally closed set in $\Pi_{N,\lambda}^a(L)\times\Pi_{2N,\mu}^{a+b}(L)$, where $\lambda=\co{A}$, $\mu=\co{B}$, $a=d_{nN,0}{A}$ and $b=d_{nN,0}{B}$. In particular, $\yprod[L]{A,B}$ is a quasiprojective variety.
 \end{lemma}
 
+{\color{gray}CONTINUE HERE THURSDAY MORNING}
 \begin{proof}
 There is $N\in\naturals$ such that $\epsilon^N L_0\subset L_0'\subset\epsilon^{-N}L_0$ and $\epsilon^N L_0'\subset L_0''\subset\epsilon^{-N}L_0'$ for each $(L,L',L'')$ with $(L,L')\in\orbit{A}$ and $(L',L'')\in\orbit{B}$. Let $a=d_{nN,0}(A)$ and $b=d_{nN,0}(B)$. Then $\yprod[L]{A,B}$ is the subset of $\Pi_{N,\co{A}}^a(L)\times\Pi_{2N,\co{B}}^{a+b}(L)$ defined by the conditions
 \begin{equation*}
