--- a/preamble.sty
+++ b/preamble.sty
@@ -165,8 +165,8 @@
 \newcommand{\matrices}{{\Lambda_1}}
 
 % row and column sums of characteristic matrix.
-\newcommand{\ro}{\operatorname{ro}}
-\newcommand{\co}{\operatorname{co}}
+\newcommand{\ro}[1]{\operatorname{ro}(#1)}
+\newcommand{\co}[1]{\operatorname{co}(#1)}
 
 % weight of the characteristic matrix
 \newcommand{\weight}{\operatorname{wt}}
@@ -185,7 +185,7 @@
 % ideal of relations for the quiver presentation
 \newcommand{\quiverrelations}[1][n,r]{I(#1)}
 
-% VARIOUS SCHUR ALGEBRAS
+% Schur algebras
 
 % quantum affine Schur algebras
 \newcommand{\qschur}[1][n,r]{\hat{S}_q(#1)}
